--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: spring
+    username: xxxxxx
     url: jdbc:mysql://localhost:3306/bank
-    password: mathematics100
+    password: xxxxxxx
   jpa:
     hibernate:
       ddl-auto: update
